@@ -1,5 +1,7 @@
 2013-03-01  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Some LHAGlue fixes and improvements.
+
 	* Fixing environment variable updating for path handling.
 
 	* Adding Cython docstrings and path/version functions.
